# sensor-data-formatter

app-front/src/App/: Frontend.hs
app-shared/: app-shared.cabal
app-shared/src/App/: Formatter.hs
js/: all.js
